tests/snapshots/pretty_print_snapshots__check_form_list.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 327
expression: out
---
(check (allow "ls -la") (ask "rm -rf /tmp/foo") (deny "rm -rf /"))
