tests/snapshots/pretty_print_snapshots__define_arg_style_full.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(define-arg-style gnu
  (long-prefix "--")
  (short-prefix "-")
  (separators " " "=")
  (combined-shorts t)
  (pun :allow))
── output ──
(define-arg-style gnu
  (long-prefix "--")
  (short-prefix "-")
  (separators " " "=")
  (combined-shorts t)
  (pun :allow))
