tests/snapshots/pretty_print_snapshots__define_arg_style_minimal.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(define-arg-style gnu (long-prefix "--") (short-prefix "-"))
── output ──
(define-arg-style gnu (long-prefix "--") (short-prefix "-"))
