tests/snapshots/pretty_print_snapshots__define_arg_style_overrides.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 317
expression: out
---
(define-arg-style java (overrides gnu) (separators " " "=" ":"))
