tests/snapshots/pretty_print_snapshots__define_predicate.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 240
expression: out
---
(define prod-host
  (and (fact? :via/ssh) (fact? [:ssh/host (regex "^prod-")])))
