tests/snapshots/pretty_print_snapshots__load_glob.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 351
expression: out
---
(load "rules/*.lisp")
