tests/snapshots/pretty_print_snapshots__narrow_width_30_breaks_rule.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 362
expression: out
---
(rule "git"
  (and (positional "push")
       (allow "push is fine")))
