tests/snapshots/pretty_print_snapshots__parser_minimal.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 248
expression: out
---
(parser "find" (style single-dash-long))
