tests/snapshots/pretty_print_snapshots__parser_with_flag_and_parameter.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(parser "kubectl" (style gnu) (flag "v") (parameter ["n" "namespace"]))
── output ──
(parser "kubectl" (style gnu) (flag "v") (parameter ["n" "namespace"]))
